; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_proto-ntp.c_ntp_v2_parse.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_proto-ntp.c_ntp_v2_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.BannerOutput = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, %struct.BannerOutput*, i32*)* @ntp_v2_parse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ntp_v2_parse(i8* %0, i32 %1, %struct.BannerOutput* %2, i32* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.BannerOutput*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.BannerOutput* %2, %struct.BannerOutput** %7, align 8
  store i32* %3, i32** %8, align 8
  %10 = load i32, i32* %6, align 4
  %11 = icmp ult i32 %10, 4
  br i1 %11, label %12, label %13

12:                                               ; preds = %4
  br label %44

13:                                               ; preds = %4
  %14 = load i8*, i8** %5, align 8
  %15 = getelementptr inbounds i8, i8* %14, i64 0
  %16 = load i8, i8* %15, align 1
  %17 = zext i8 %16 to i32
  %18 = ashr i32 %17, 7
  %19 = icmp ne i32 %18, 1
  br i1 %19, label %20, label %21

20:                                               ; preds = %13
  br label %44

21:                                               ; preds = %13
  %22 = load i8*, i8** %5, align 8
  %23 = getelementptr inbounds i8, i8* %22, i64 0
  %24 = load i8, i8* %23, align 1
  %25 = zext i8 %24 to i32
  %26 = ashr i32 %25, 3
  %27 = and i32 %26, 7
  %28 = icmp ne i32 %27, 2
  br i1 %28, label %29, label %30

29:                                               ; preds = %21
  br label %44

30:                                               ; preds = %21
  %31 = load i8*, i8** %5, align 8
  %32 = getelementptr inbounds i8, i8* %31, i64 0
  %33 = load i8, i8* %32, align 1
  %34 = zext i8 %33 to i32
  %35 = and i32 %34, 7
  store i32 %35, i32* %9, align 4
  %36 = load i32, i32* %9, align 4
  switch i32 %36, label %44 [
    i32 6, label %37
    i32 7, label %38
  ]

37:                                               ; preds = %30
  br label %44

38:                                               ; preds = %30
  %39 = load i8*, i8** %5, align 8
  %40 = load i32, i32* %6, align 4
  %41 = load %struct.BannerOutput*, %struct.BannerOutput** %7, align 8
  %42 = load i32*, i32** %8, align 8
  %43 = call i32 @ntp_priv(i8* %39, i32 %40, %struct.BannerOutput* %41, i32* %42)
  br label %44

44:                                               ; preds = %12, %20, %29, %30, %38, %37
  ret void
}

declare dso_local i32 @ntp_priv(i8*, i32, %struct.BannerOutput*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
